Se configuran propiedades

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=todoService
+server.servlet.context-path=/todo/api
+server.port=8082
+
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/todo?createDatabaseIfNotExist=false&userSSL=false&serverTimezone=UTC}
+spring.datasource.username=${DATABASE_USERNAME:root}
+spring.datasource.password=${DATABASE_PASSWORD:S3cret4sa}
+
+
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.messages.basename= lang/res
+
+spring.web.resources.add-mappings= true
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-exception=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+
+
