Trabajando en Autenticacion con Google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,25 @@
 spring.application.name=todoService
 server.servlet.context-path=/todo/api
 server.port=8082
-
-spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/todo?createDatabaseIfNotExist=false&userSSL=false&serverTimezone=UTC}
-spring.datasource.username=${DATABASE_USERNAME:root}
-spring.datasource.password=${DATABASE_PASSWORD:S3cret4sa}
-
+spring.datasource.url=jdbc:mysql://localhost:3306/todo?createDatabaseIfNotExist=false&userSSL=false&serverTimezone=UTC
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.messages.basename= lang/res
+spring.messages.basename=lang/res
 
-spring.web.resources.add-mappings= true
+spring.web.resources.add-mappings=true
 server.error.include-message=always
 server.error.include-binding-errors=always
 server.error.include-exception=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8082/todo/api/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
 
-
-
+logging.level.org.springframework.security=DEBUG
