--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,7 @@ spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8082/todo/api/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://accounts.google.com
+
 logging.level.org.springframework.security=DEBUG
